--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -17,15 +17,19 @@
   background-color: #282c34;
   min-height: 100px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App-header h2{
+  margin: 0 0 10px 0;
 }
+
+main{
+  padding: 20px 40px;
+}
+
 
 @keyframes App-logo-spin {
   from {
