--- a/src/Components/Controls/Controls.module.css
+++ b/src/Components/Controls/Controls.module.css
@@ -1,3 +1,21 @@
+.controlWrapper {
+    /*color: rgba(0, 0, 0, 0.87);*/
+    /*transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;*/
+    /*background-color: #fff;*/
+    /*box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),*/
+    /*            0px 1px 1px 0px rgb(0 0 0 / 14%),*/
+    /*            0px 1px 3px 0px rgb(0 0 0 / 12%);*/
+    /*padding: 10px 20px;*/
+    /*border-radius: 5px;*/
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+}
+.controlWrapper hr {
+    margin: 0 0 10px 0;
+    width: 100%;
+}
 .filterItem {
     width: 30px;
     height: 30px;
@@ -6,22 +24,78 @@
     display: flex;
     align-content: center;
     justify-content: center;
+    margin: 5px 10px;
 }
+
 
 .filterItemContent {
     display: flex;
-    width: 20px;
+    width: 15px;
 }
 
-.title{}
-.filter, .sort{
+.filterItem:first-child,
+.sortItem:first-child {
+    margin-left: 0;
+}
+
+.title {
+    margin: 0 0 10px 0;
+}
+.sort {
+    margin: 0 0 10px 0;
+}
+.filter, .sort {
     display: flex;
     justify-content: center;
 }
 
 .sortItem {
     padding: 5px 10px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
 }
-.sortItemContent {
 
+
+.sortItemContent {
+    margin-right: 10px;
+    display: flex;
+    align-content: center;
+    background: none;
+    border: none;
+    outline: none;
+    color: inherit;
+}
+.returnWrapper {
+    min-height: 30px;
+}
+.return {
+    color: dodgerblue;
+}
+.return:hover {
+    cursor: pointer;
+}
+.controlSortArrowDown {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 5px 5px 5px;
+    border-color: transparent transparent #ffffffff transparent;
+}
+.controlSortArrowUp {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 5px 5px 0 5px;
+    border-color: #ffffffff transparent transparent transparent;
+}
+.sortActive {
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+}
+.filterActive {
+    background: red;
+    border: red;
+    fill: white;
 }
