--- a/src/Components/PageContent/PageContent.module.css
+++ b/src/Components/PageContent/PageContent.module.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
 }
 .postWrapper {
-    padding: 20px 40px;
+    text-align: left;
 }
 .date {
 
@@ -25,6 +25,11 @@
 }
 .attachments {
     display: grid;
-     grid-template-columns: 1fr 1fr 1fr;
-     grid-gap: 5px;
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-gap: 10px;
+}
+.link {
+    color: deepskyblue;
+    text-decoration: none;
+    font-size: 20px;
 }
